[package]
name = "meshproc"
version = "0.1.0"
authors = ["Garrett Malmquist <garrett.malmquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.4", features = ["executor", "thread-pool"] }
stl_io = "0.4.2"
tempfile = "3.1.0"
uuid = { version = "0.8.1", features = ["v4"] }
byteorder = "1.3.4"